# 1-package-ml-model-group-5

./: .gitignore  README.md  pyproject.toml
src/ie_bike_model/: __init__.py  model.py  model2.py
src/ie_bike_model/tests/: alpha_test.py  test_model.py
src/ie_bike_model/trained_model/: model.pkl
tests/: test_model.py
